Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2390

List of installed packages on Maemo device is wrong

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Qt Creator 2.1.0
    • Qt Creator 2.0.1
    • Remote Linux
    • None
    • Qt Creator 2.0.1, Mac OS 10.6, Maemo 5 20.2010.31-7
    • 4fb9ffc96cb90a62b3bc64ae70ae0797af118de5

    Description

      Deleted Qt packages (in "rc" state) are also listed as installed in Preferences/Projects/Maemo Device Configurations/Test:

      Device configuration successful.
      Hardware architecture: armv7l
      Kernel version: 2.6.28-omap1
      List of installed Qt packages:
      libqt4-core 4.6.2
      libqt4-dbus 4.6.2
      libqt4-declarative 4.7.0
      libqt4-gui 4.6.2
      libqt4-maemo5 4.6.2
      libqt4-multimedia 4.7.0
      libqt4-network 4.6.2
      libqt4-opengl 4.6.2
      libqt4-phonon 4.6.2
      libqt4-script 4.7.0
      libqt4-sql 4.7.0
      libqt4-svg 4.7.0
      libqt4-webkit 4.6.2
      libqt4-xml 4.6.2
      libqt4-xmlpatterns 4.6.2

      Note the 4.7.0 packages from the list above are actually not installed (they are in "residual config" state):

      /home/developer # dpkg -l |grep libqt|grep '^rc'
      rc libqt4-declarative 4.7.0~git20100803-0maemo1+0m5 Qt 4 declarative module
      rc libqt4-multimedia 4.7.0~git20100803-0maemo1+0m5 Qt 4 Multimedia Libraries
      rc libqt4-script 4.7.0~git20100803-0maemo1+0m5 Qt 4 script module
      rc libqt4-sql 4.7.0~git20100803-0maemo1+0m5 Qt 4 SQL module
      rc libqt4-svg 4.7.0~git20100803-0maemo1+0m5 Qt 4 SVG module

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            pipacs Akos Polster
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes