Maemo: Filter uninstalled Qt libraries from dpkg output.

Task-number: QTCREATORBUG-2390
Reviewed-by: kh1